# sc2ts-paper

./: .gitignore  Jackson-et-al-recombinants.ipynb  Makefile  Pango-X-plausibility-score.ipynb  README.md  Snakefile  analyse.py  main.tex  make_csv_files.py  paper.bib  paper.tex  plot.py  pyproject.toml  references.bib  refstyle.bst  requirements.txt  utils.py
arg_postprocessing/: CovRecomb.yml  NC_045512v2.fa  README.md  Snakefile  deletion_sites.txt  pangolin.yml  rebar.yml  recombinant_processing.ipynb  remapped_sites.txt  ripples_3seq_p3.csv  ripples_3seq_p4.csv  ripples_p3_3seq.csv  run_rebar_on_recombinants.sh  samples_that_changed.csv  samples_that_changed.json  sc2ts.yml  sc2ts_2023-02-21_intersection_asp.csv  sc2ts_v1_2023-02-21_pp_dated_remapped_bps_pango_rebar_output.tsv  sc2ts_v1_2023-02-21_pp_dated_remapped_bps_pango_recombinants.csv  sc2ts_v1_2023-02-21_pp_dated_remapped_bps_pango_recombinants_matches_pangonet.csv  sc2ts_v1_2023-02-21_pp_dated_remapped_bps_pango_recombinants_matches_pangonet_nsl.csv  sc2ts_v1_2023-02-21_pp_dated_remapped_bps_pango_recombinants_rebar_matches_pangonet_nsl.csv  sc2ts_v1_2023-02-21_pp_dated_remapped_parsimony.csv  sc2ts_v1_2023-02-21_pp_dels_bps_pango_dated_recombinants.csv  sc2ts_v1_2023-02-21_pp_dels_deletion_events.csv  sc2ts_v1_2023-02-21_pp_dels_parsimony.csv  sc2ts_v1_2023-02-21_pr_pp_mp_aph_bps_pango_dated_3seq.csv  sc2ts_v1_2023-02-21_pr_pp_mp_aph_bps_pango_dated_CovRecomb_output.csv  sc2ts_v1_2023-02-21_pr_pp_mp_aph_bps_pango_dated_deletion_events.csv  sc2ts_v1_2023-02-21_pr_pp_sites_to_remap.csv  (+11 more)
data/: .gitignore  (+46 more)
(+292 files in other folders)
